# Memora

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LECTURE.md  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  export_graph.py  graph_viewer.html  memora_foundations.tex  ontology_default.yaml  pyproject.toml  reingest.py  requirements.txt  serve.py  watches_default.yaml
backend/: Dockerfile  cli.py  pyproject.toml  reingest.py  requirements.txt
backend/memora/: config.py
backend/tests/: election_scenario.md
cli/: __init__.py  app.py  rendering.py  tracker.py
cli/commands/: actions.py  briefing.py  browse.py  capture.py  clear_data.py  connectors.py  council.py  critique.py  dossier.py  graph_intel.py  horizon.py  investigate.py  networks.py  outcomes.py  patterns.py  people.py  profile.py  proposals.py  research.py  stats.py  strategy.py  strategy_graph.py  strategy_map.py  timeline.py  watchlist.py
cli/strategy/: __init__.py  analytics.py  data.py  phase_engine.py
dashboard/: index.html
dashboard/css/: gotham.css
dashboard/js/: api.js  app.js
docs/: configuration.md  intelligence-platforms-research.md  ontology.md  pipeline.md  the-new-memora.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
memora/: __init__.py  config.py
memora/agents/: archivist.py  orchestrator.py  (+3 more)
scripts/: import_courses.py  import_people.py  import_strategy.py  seed_positions.py
tests/: conftest.py
(+222 files in other folders)
